# AION-Search

./: .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
configs/: baseline_original.yaml
examples/: quick_start.ipynb
galaxybench/dataprep/galaxyzoo/: selected_galaxies_summary.json
galaxybench/eval/: utils_gemini.py
galaxybench/eval/combined/: judge.py  print_score.py  summarize_runs.py
galaxybench/eval/combined/config/: __init__.py  base.py
galaxybench/eval/combined/display_config/: galaxyzoo.js
prompt_optimization/: eval.py
research/: README.md
research/galaxybench/eval/: utils_openai.py
research/prompt_optimization/: plot_performance_vs_cost.py  utils.py
research/prompt_optimization/prompts/: criteria_less_prompt.txt
research/src/: 02a_generate_descriptions_batch.py  03a_generate_augmented_descriptions_batch.py  06_train_clip.py
research/src/utils/: models.jsonl
src/: 01_collect_galaxies.py  04_generate_text_embeddings.py  05_generate_unified_embeddings.py  06_train_clip.py  check_batch.py
src/clip/models/: __init__.py  clip_model.py
src/clip/utils/: data_loader.py  logging_utils.py
src/evals/: eval_utils.py
src/evals/baselines/: aion_baseline.py
src/experiments/aion_table4/: analyze_rerank_ties.py  eval_table4_gz.py  eval_table4_lens.py  rerank_table4.py
src/experiments/rerank/: evaluate_checkpoint_lens_count.py  rerank_multi_experiments.py  rerank_single_question.py
src/plotting_scripts/: __init__.py  default_plot.py
src/prompts/: general_promptv4.txt
src/utils/: openai_utils.py
(+107 files in other folders)
