[project]
name = "aionsearch"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "astropy>=6.1.7",
  "huggingface-hub>=0.25.0",
  "numpy>=1.26,<2.2",
  "polymathic-aion>=0.0.2",
  "python-dotenv>=1.2.1",
  "requests>=2.32.0",
  "safetensors>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aionsearch"]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "matplotlib",
]
openai = ["openai>=2.12.0"]
torch = ["torch"]